# Video-Translator

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  config.json  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  video-translator.spec
.github/workflows/: ci.yml  release-build.yml
docs/: BUILD_WINDOWS.md  WEB.md
gui/: app.py
models/: __init__.py  whisper_model.py
src/: __init__.py  __main__.py  config.py  pipeline.py  subtitles.py  translator.py  types.py  web_app.py
tests/: test_subtitles.py  test_text.py  test_timecode.py  test_youtube.py
utils/: ffmpeg.py  hardware.py  logger.py  text.py  timecode.py  youtube.py
web/static/: app.js  index.html  styles.css
